tests/baselines/reference/commaOperator1.errors.txt
tests/cases/compiler/commaOperator1.ts(1,11): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/compiler/commaOperator1.ts(1,11): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/compiler/commaOperator1.ts(1,11): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/compiler/commaOperator1.ts(1,12): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/compiler/commaOperator1.ts(1,12): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/compiler/commaOperator1.ts(1,29): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/compiler/commaOperator1.ts(4,12): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/compiler/commaOperator1.ts(4,12): error TS2695: Left side of comma operator is unused and has no side effects.


==== tests/cases/compiler/commaOperator1.ts (8 errors) ====
    var v1 = ((1, 2, 3), 4, 5, (6, 7));
              ~~~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
              ~~~~~~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
              ~~~~~~~~~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
               ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
               ~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                                ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    function f1() {
        var a = 1;
        return a, v1, a;
               ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
               ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    }
    